re PR c++/19980 (ICE on invalid template declaration)

PR c++/19980
	* decl.c (start_preparsed_function): Robustify.

	* g++.dg/template/redecl3.C: New test.

From-SVN: r96874